[package]
name = "mazzaroth-xdr"
version = "0.2.5"
authors = ["Kochavalabs <dev@mazzaroth.io>"]
description = "XDR objects used by Mazzaroth"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kochavalabs/mazzaroth-xdr"
repository = "https://github.com/kochavalabs/mazzaroth-xdr"
edition = "2018"
keywords = ["mazzaroth", "xdr"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
xdr-rs-serialize = { version = "0.2.5" }
xdr-rs-serialize-derive = { version = "0.2.5" }
json = "0.12.0"

[lib]
path = "rust/xdr_generated.rs"
