[package]
name = "mazzaroth-xdr"
version = "0.7.2"
authors = ["Kochavalabs <dev@mazzaroth.io>"]
description = "XDR objects used by Mazzaroth"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kochavalabs/mazzaroth-xdr"
repository = "https://github.com/kochavalabs/mazzaroth-xdr"
edition = "2018"
keywords = ["mazzaroth", "xdr"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
xdr-rs-serialize = "0.3.0"
xdr-rs-serialize-derive = "0.3.0"
json = "0.12.0"

[lib]
path = "rust-xdr/xdr_generated.rs"
